# CaptivePortal_Custom

./: .clinerules  .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.github/workflows/: esp32_ci.yml
components/app_local_server/: CMakeLists.txt  app_local_server.c
components/app_local_server/include/: app_local_server.h
components/app_local_server/webpage/: app.js  index.html  rfid_management.html  rfid_management.js
components/app_time_sync/: CMakeLists.txt  app_time_sync.c
components/app_time_sync/include/: app_time_sync.h
components/app_wifi/: CMakeLists.txt  app_wifi.c
components/app_wifi/include/: app_wifi.h
components/aws_iot/: CMakeLists.txt  README.md  aws_iot.c
components/aws_iot/certs/: README.md
components/aws_iot/include/: aws_iot.h
components/aws_iot/test/: CMakeLists.txt  aws_iot_test.c
components/nvs_storage/: nvs_storage.c
components/nvs_storage/include/: nvs_storage.h
components/rfid_manager/: CMakeLists.txt  rfid_manager.c
components/rfid_manager/include/: rfid_manager.h
components/rfid_manager/test/: rfid_tests.c
components/spi_ffs_storage/: CMakeLists.txt  spi_ffs_storage.c
components/spi_ffs_storage/include/: spi_ffs_storage.h
components/unity_test/: CMakeLists.txt  unity_test.c
components/unity_test/include/: unity_test.h
main/: CMakeLists.txt  app_station.c  main.c  time_sync.c
main/include/: local_server.h  time_sync.h
main/webpage/: app.js
test/: sdkconfig.old
test/main/: Kconfig.projbuild  example_unit_test_test.c
